# SPHERLS

./: Doxyfile  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
data/AF_OPACITY_GN93_1994/: g0.0.tron  g0.00001.tron  g0.00003.tron  g0.0001.tron  g0.0003.tron  g0.001.tron  g0.002.tron  g0.004.tron  g0.01.tron  g0.02.tron  g0.03.tron  g0.04.tron  g0.06.tron  g0.08.tron  g0.10.tron  g1.0.tron  g1.00001.tron  g1.00003.tron  g1.0001.tron  g1.0003.tron  g1.001.tron  g1.002.tron  g1.004.tron  g1.01.tron  g1.02.tron  g1.03.tron  g1.04.tron  g1.06.tron  g1.08.tron  g1.10.tron  g2.0.tron  g2.00001.tron  g2.00003.tron  g2.0001.tron  g2.0003.tron  g2.001.tron  g2.002.tron  g2.004.tron  g2.01.tron  g2.02.tron  (+121 more)
data/OPAL_EOS/: Neos02z0x  Neos02z2x  Neos02z4x  Neos02z6x  Neos02z8x  Neos04z0x  Neos04z2x  Neos04z4x  Neos04z6x  Neos04z8x  Neos0z0x  Neos0z2x  Neos0z4x  Neos0z6x  Neos0z8x
data/OPAL_EOSPLUS/: peos02z0x  peos02z2x  peos02z4x  peos02z6x  peos02z8x  peos04z0x  peos04z2x  peos04z4x  peos04z6x  peos04z8x  peos0z0x  peos0z2x  peos0z4x  peos0z6x  peos0z8x
data/atmospheres/: ReadMe.txt
data/energy_pro/: e_profile.xls
data/eos/: Makefile  convert.cpp  eos  eosCTOPAC  eosNewCTOPACY299Z001  eosNewY240Z002  eosNewY240Z002.xml  eosNewY24Z002  eosNewY299Z001  eosNewY299Z001.xml  eosNewY300Z002  eosY240Z002
data/velocity_pro/: chris_vel  chris_vel1  chris_vel2  chris_vel_T5000
docs/example/: README.txt  SPHERLS.xml  job_script_template.sh  plot_2DSlices.xml  plot_profile.xml  plot_profile_output.xml
docs/templateXML/: SPHERLS_reference.xml  SPHERLSgen_reference.xml  eos_interp_reference.xml  light_curve_reference.xml  make_hdf2_reference.xml  make_hdf_reference.xml  phase_light_curves_reference.xml  plot_2DSlices_reference.xml  plot_file_reference.xml  plot_profile_reference.xml  work_plot_reference.xml
phys_eq_comparison/: changes_that_impact_calculations.txt  functions.txt  make_files.py
phys_eq_comparison/not_comparing/: calDelt_CONST.cpp  calDelt_RT_GL.cpp  calNewE_RTP_AD.cpp  calNewE_RT_NA.cpp  calNewE_R_NA_LES.cpp  calNewEddyVisc_RTP_CN.cpp  calNewEddyVisc_RT_CN.cpp  calNewEddyVisc_R_CN.cpp  calNewQ0Q1Q2_RTP_GL.cpp  calNewQ0Q1_RT_GL.cpp  calNewQ0_R_GL.cpp  calNewU_RT.cpp  calNewU_R_LES.cpp  calNewV_RT.cpp  calNewVelocities_RT.cpp  calNewVelocities_RTP.cpp  calNewVelocities_R_LES.cpp  calOldEddyVisc_R_CN.cpp  calOldQ0Q1Q2_RTP_GL.cpp  calOldQ0Q1_RT_GL.cpp  calOldQ0_R_GL.cpp  dImplicitEnergyFunction_RT.cpp  dImplicitEnergyFunction_RTP.cpp  dImplicitEnergyFunction_RT_SB.cpp  dImplicitEnergyFunction_R_LES_SB.cpp  initDonorFracAndMaxConVel_RTP_GL.cpp  initDonorFracAndMaxConVel_RT_GL.cpp
scripts/: Doxyfile  SPHERLS_run.py  SPHERLSanal_path.py  archive_output.py  average_PKE.py  bin_paths.py  calculate_residuals_of_light_curve_fit.py  combine_bins.py  combine_bins_persistent.py  compare_sedov_blasts.py  cp_files.py  datafile.py  diffDumps.py  disect_filename.py  dump.py  eos_interp.py  fit_light_curves.py  foureir_transform.py  light_curve.py  make_2DSlices.py  make_hdf.py  make_hdf2.py  make_profiles.py  make_vtk.py  mv_files.py  myExceptions.py  mywarnings.py  parse_formula.py  paths.py  period_from_PKE_ave.py  phase_light_curves.py  plot_2DSlices.py  plot_Lum_diffs.py  plot_file.py  plot_light_curve.py  plot_max_variance.py  plot_max_variance_ave.py  plot_max_variance_exploring.py  plot_profile.py  plot_reproducable.py  (+8 more)
src/: Doxyfile  Makefile.am  eos.cpp  eos.h  exception2.cpp  exception2.h  userguide.txt  xmlFunctions.cpp  xmlFunctions.h  xmlParser.cpp  xmlParser.h
src/SPHERLS/: Doxyfile  Makefile  Makefile.am  dataManipulation.cpp  dataManipulation.h  dataMonitoring.cpp  dataMonitoring.h  eos.h  fileExists.cpp  fileExists.h  global.cpp  global.h  main.cpp  main.h  physEquations.cpp  physEquations.h  procTop.cpp  procTop.h  profileData.cpp  profileData.h  testProfileData.cpp  time.cpp  time.h  userguide.h  watchzone.cpp  watchzone.h
src/SPHERLS/eos/: convert.cpp  eosCTOPAC_old
src/SPHERLS/phys_eq_comparison/not_comparing/: calDelt_RTP_GL.cpp  calDelt_R_GL.cpp  calNewE_RTP_NA.cpp  calNewE_RT_AD.cpp  calNewE_R_AD.cpp  calNewU_RTP.cpp  calNewV_RTP.cpp  calOldEddyVisc_RTP_CN.cpp  calOldEddyVisc_RT_CN.cpp  calOldEddyVisc_R_SM.cpp  calOldP_GL.cpp  dImplicitEnergyFunction_RTP_SB.cpp  dImplicitEnergyFunction_R_LES.cpp  initDonorFracAndMaxConVel_R_GL.cpp
src/SPHERLS/phys_eq_comparison/nothing_to_compare/: calNewVelocities_R.cpp  calNewVelocities_RT_LES.cpp  calNewW_RTP.cpp  calOldDenave_R.cpp  calOldPEKappaGamma_TEOS.cpp  dImplicitEnergyFunction_None.cpp  implicitSolve_None.cpp  initInternalVars.cpp  setInternalVarInf.cpp  setMainFunctions.cpp
src/SPHERLS/phys_eq_comparison/original_of_compared/: calDelt_RTP_TEOS.cpp  calDelt_RT_TEOS.cpp  calNewD_R.cpp  calNewD_RT.cpp  calNewE_R_NA.cpp  calNewEddyVisc_RT_SM.cpp  calNewEddyVisc_R_SM.cpp  calNewQ0_R_TEOS.cpp  calNewU0_R.cpp  calNewU0_RT.cpp  calNewU0_RTP.cpp  calNewU_R.cpp  calNewU_RTP_LES.cpp  calNewV_RTP_LES.cpp  calNewV_RT_LES.cpp  calOldDenave_RT.cpp  calOldDenave_RTP.cpp  calOldEddyVisc_RTP_SM.cpp  calOldQ0Q1Q2_RTP_TEOS.cpp  calOldQ0_R_TEOS.cpp  dImplicitEnergyFunction_R.cpp  dImplicitEnergyFunction_RT_LES.cpp  dImplicitEnergyFunction_R_SB.cpp  implicitSolve_R.cpp  implicitSolve_RT.cpp  implicitSolve_RTP.cpp
src/SPHERLS/phys_eq_comparison/reintroduced/: calDelt_RTP_TEOS.cpp  calDelt_RT_TEOS.cpp  calDelt_R_TEOS.cpp  calNewD_RT.cpp  calNewE_RTP_NA_LES.cpp  calNewEddyVisc_R_SM.cpp  calNewU0_R.cpp  calNewU0_RT.cpp  calNewU_RTP_LES.cpp  calNewV_RTP_LES.cpp  calNewV_RT_LES.cpp  calOldEddyVisc_RTP_SM.cpp  calOldQ0Q1Q2_RTP_TEOS.cpp  calOldQ0Q1_RT_TEOS.cpp  dImplicitEnergyFunction_RTP_LES.cpp  dImplicitEnergyFunction_RT_LES.cpp  dImplicitEnergyFunction_RT_LES_SB.cpp  dImplicitEnergyFunction_R_SB.cpp  implicitSolve_R.cpp  implicitSolve_RTP.cpp  initDonorFracAndMaxConVel_RTP_TEOS.cpp  initDonorFracAndMaxConVel_R_TEOS.cpp
src/SPHERLSanal/: Doxyfile  Makefile  Makefile.am  main.cpp  main.h  userguide.h
src/SPHERLSgen/: Doxyfile  Makefile  Makefile.am  main.cpp  main.h  userguide.h
(+145 files in other folders)
